[gd_scene load_steps=4 format=3 uid="uid://hybn3mi4aa16"]

[ext_resource type="Theme" uid="uid://cuj83hvxpvuqo" path="res://asset/pool_theme.tres" id="1_n6555"]
[ext_resource type="Script" path="res://dev/pool_item.gd" id="2_2m3y8"]
[ext_resource type="Texture2D" uid="uid://c5innhkh8x47u" path="res://asset/delete.png" id="2_uwmlh"]

[node name="PoolItem" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_n6555")
script = ExtResource("2_2m3y8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 28.0
text = "名称："

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 168.0
offset_right = 228.0
offset_bottom = 28.0
text = "阵营："

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 68.0
text = "权重："

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 40.0
offset_right = 236.0
offset_bottom = 68.0
text = "最大数量："

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 48.0
offset_right = 144.0
offset_bottom = 31.0
placeholder_text = "输入名称"

[node name="WeightEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 115.0
offset_bottom = 71.0
text = "0.5"

[node name="CountEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 40.0
offset_right = 283.0
offset_bottom = 71.0
text = "1"

[node name="TeamEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 216.0
offset_right = 320.0
offset_bottom = 31.0
placeholder_text = "输入阵营"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 16.0
offset_right = 384.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 24
icon = ExtResource("2_uwmlh")
